fixed weird link spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ h1 {
     font-size: 20px;
     font-family: 'Helvetica', sans-serif;
     text-align: center;
-    word-spacing: 2em;
 }
 
 .sites {
@@ -27,7 +26,6 @@ h1 {
     font-size: 20px;
     font-family: 'Helvetica', sans-serif;
     text-align: center;
-    word-spacing: 2em;
 }
 
 a:link {
